--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "sass": "^1.63.2",
     "styled-components": "^6.0.0-rc.3",
+    "swiper": "^9.4.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
